--- a/Receitas/projeto_10AlmeiraoComArrozBranco.html
+++ b/Receitas/projeto_10AlmeiraoComArrozBranco.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Pão de Batata Doce</title>
+    <title>Almeirão com Arroz Branco</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,15 +52,15 @@
             <section id="scrollspyHeading1" class="mt-5">
                 <div class="container text-center ">
                     <!-- titulo da receita -->
-                    <h1 class="corForte">Pão de Batata Doce</h1>
+                    <h1 class="corForte">Almeirão com Arroz Branco</h1>
                     <!-- como fazer 'nome da receita' -->
-                    <h3 class=" corFraca"><span>Como fazer o seu Pão de Batata Doce?</span></h3>
-                    <img src="../image/PaoDoce.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
+                    <h3 class=" corFraca"><span>Como fazero o seu Almeirão com Arroz Branco?</span></h3>
+                    <img src="../image/Almeirao.jpeg" class="img-fluid"  style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
-                    <p>O Pão de Batata Doce é uma delícia que combina a suavidade da batata doce com a textura macia do
-                        pão. Com um toque de doçura e aroma irresistível, esse pão é uma opção versátil que pode ser
-                        apreciada no café da manhã, lanche da tarde ou em diversas ocasiões especiais.</p>
+                    <p>O Almeirão com Arroz Branco é uma combinação deliciosa e saudável que destaca a simplicidade e os
+                        sabores frescos. Originária da culinária brasileira, essa receita tradicional ganhou
+                        popularidade devido à facilidade de preparo e à combinação equilibrada de ingredientes.</p>
                 </div>
                 <hr>
                 <div class="container text-center text-white">
@@ -69,45 +69,37 @@
 
                     <ul class="list-group bgFooter">
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            3 xícaras (chá) de farinha de trigo
+                            1 maço de almeirão
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 e 1/2 xícara (chá) de batata doce cozida e amassada
+                            2 xícaras de arroz branco
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 envelope de fermento biológico (10 g)
+                            1 cebola média, picada
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            4 colheres (sopa) de manteiga em temperatura ambiente
+                            2 dentes de alho, picados
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1/2 xícara (chá) de açúcar
+                            2 colheres de sopa de azeite de oliva
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 xícara (chá) de leite
-                            <span class="badge bg-primary rounded-pill">1</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 gema
-                            <span class="badge bg-primary rounded-pill">1</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 ovo
+                            Sal e pimenta a gosto
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                     </ul>
 
-
                     <br>
                     <!-- em quais ocasiões a receita é adequada -->
-                    <p class="corFraca">Esse Pão de Batata Doce é perfeito para diversas ocasiões, desde um café da
-                        manhã acolhedor até um acompanhamento especial para um chá da tarde. A doçura sutil da batata
-                        doce torna-o uma escolha excelente para eventos festivos ou refeições em família.
+                    <p class="corFraca">O Almeirão com Arroz Branco é uma opção versátil que pode ser apreciada em
+                        diversas ocasiões. Seja como prato principal em um almoço leve ou como acompanhamento em um
+                        jantar mais sofisticado, essa receita se encaixa perfeitamente em reuniões familiares,
+                        celebrações informais ou até mesmo em um dia comum da semana.
                     </p>
                     <button type="button" class="btn bgForte btn-lg"><a href="#"
                             class="text-decoration-none text-white p-5">Saiba mais</a></button>
@@ -126,10 +118,24 @@
 
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Reuna os Ingredientes</h3>
+                                        <h3>Preparando o Almeirão</h3>
+
                                         <p>
-                                            Em uma tigela grande, misture todos os ingredientes até formar uma massa
-                                            homogênea.
+                                            Lave bem o maço de almeirão sob água corrente.
+                                        </p>
+                                        <p>
+                                            Retire as folhas do maço e corte-as em tiras finas.
+                                        </p>
+                                        <p>
+                                            Em uma panela, aqueça uma colher de sopa de azeite e refogue a cebola e o
+                                            alho até dourarem.
+                                        </p>
+                                        <p>
+                                            Adicione as tiras de almeirão ao refogado, mexendo ocasionalmente até que
+                                            murchem e fiquem macias.
+                                        </p>
+                                        <p>
+                                            Reserve o almeirão.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -138,11 +144,20 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Sove a massa</h3>
+                                        <h3>Preparando o Arroz Branco</h3>
                                         <p>
-                                            Sove a massa vigorosamente. Quanto mais sovar, melhor será a consistência do
-                                            pão.
-
+                                            Em outra panela, aqueça uma colher de sopa de azeite.
+                                        </p>
+                                        <p>
+                                            Adicione o arroz e mexa até que fique levemente dourado.
+                                        </p>
+                                        <p>
+                                            Acrescente água (conforme as instruções do pacote de arroz), sal e pimenta a
+                                            gosto.
+                                        </p>
+                                        <p>
+                                            Cozinhe o arroz em fogo médio até que esteja completamente cozido e a água
+                                            tenha sido absorvida.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -151,84 +166,24 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Divida a massa</h3>
+                                        <h3>Finalizando o Prato</h3>
                                         <p>
-                                            Divida a massa em duas partes e molde dois pães.
+                                            Misture o almeirão refogado ao arroz branco cozido.
+                                        </p>
+                                        <p>
+                                            Verifique o tempero e ajuste conforme necessário.
+                                        </p>
+                                        <p>
+                                            Sirva quente, acompanhado de uma salada verde ou como acompanhamento para
+                                            carnes grelhadas.
                                         </p>
                                     </div>
                                     <div class="tempo">
                                         <h4>Passo 3</h4>
                                     </div>
+
                                 </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Coloque os pães</h3>
-                                        <p>
-                                            Coloque os pães em uma forma untada.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 4</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Deixe a massa crescer</h3>
-                                        <p>
-                                            Deixe a massa crescer até dobrar de volume, o que geralmente leva cerca de 1
-                                            hora, dependendo das condições climáticas.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 5</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Pré-aqueça o forno</h3>
-                                        <p>
-                                            Pré-aqueça o forno a 180º C.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 6</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Asse os pães</h3>
-                                        <p>
-                                            Asse os pães por aproximadamente 35 minutos ou até que fiquem dourados e
-                                            cozidos por dentro.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 7</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Retire do forno</h3>
-                                        <p>
-                                            Retire do forno e deixe esfriar antes de servir.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 8</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Aproveite</h3>
-                                        <p>
-                                            Sirva o Pão de Batata Doce fatiado e aproveite!
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 9</h4>
-                                    </div>
-                                </li>
-                                <div style="clear: both"></div>
+                                    <div style="clear: both"></div>
                             </ul>
                         </section>
                     </section>
@@ -236,29 +191,34 @@
                     <section class="aparecePcell">
                         <div class="container aparecePcel  ">
                             <h2 class="corForte">Passo a passo</h2>
-                            <h3 class="corForte">Passo 1</h3>
-                            <p class="fst-normal corFraca">Em uma tigela grande, misture todos os ingredientes até
-                                formar uma massa homogênea.</p>
-                            <h3 class="corForte">Passo 2</h3>
-                            <p class="fst-normal corFraca">Sove a massa vigorosamente. Quanto mais sovar, melhor será a
-                                consistência do pão.</p>
-                            <h3 class="corForte">Passo 3</h3>
-                            <p class="fst-normal corFraca">Divida a massa em duas partes e molde dois pães.</p>
-                            <h3 class="corForte">Passo 4</h3>
-                            <p class="fst-normal corFraca">Coloque os pães em uma forma untada.</p>
-                            <h3 class="corForte">Passo 5</h3>
-                            <p class="fst-normal corFraca">Deixe a massa crescer até dobrar de volume, o que geralmente
-                                leva cerca de 1 hora, dependendo das condições climáticas.</p>
-                            <h3 class="corForte">Passo 6</h3>
-                            <p class="fst-normal corFraca">Pré-aqueça o forno a 180º C.</p>
-                            <h3 class="corForte">Passo 7</h3>
-                            <p class="fst-normal corFraca">Asse os pães por aproximadamente 35 minutos ou até que fiquem
-                                dourados e cozidos por dentro.</p>
-                            <h3 class="corForte">Passo 8</h3>
-                            <p class="fst-normal corFraca">Retire do forno e deixe esfriar antes de servir.</p>
-                            <h3 class="corForte">Passo 9</h3>
-                            <p class="fst-normal corFraca">Sirva o Pão de Batata Doce fatiado e aproveite!</p>
-
+                            <h3 class="corForte">Preparando o Almeirão:</h3>
+                            <ul class="corFraca">
+                                <li>Lave bem o maço de almeirão sob água corrente.</li>
+                                <li>Retire as folhas do maço e corte-as em tiras finas.</li>
+                                <li>Em uma panela, aqueça uma colher de sopa de azeite e refogue a cebola e o
+                                    alho até dourarem.</li>
+                                <li>Adicione as tiras de almeirão ao refogado, mexendo ocasionalmente até que
+                                    murchem e fiquem macias.</li>
+                                    <li>Reserve o almeirão.</li>
+                            </ul>
+                            <h3 class="corForte">Preparando o Arroz Branco</h3>
+                            <ul class="corFraca">
+                                <li>Em outra panela, aqueça uma colher de sopa de azeite.</li>
+                                <li>Adicione o arroz e mexa até que fique levemente dourado.</li>
+                                <li>Acrescente água (conforme as instruções do pacote de arroz), sal e pimenta a
+                                    gosto.</li>
+                                <li>Cozinhe o arroz em fogo médio até que esteja completamente cozido e a água
+                                    tenha sido absorvida.<li>
+                            </ul>
+                            <h3 class="corForte">Finalizando o Prato</h3>
+                            <ul class="corFraca">
+                                <li>Misture o almeirão refogado ao arroz branco cozido.
+                                </li>
+                                <li>Verifique o tempero e ajuste conforme necessário.</li>
+                                <li>Sirva quente, acompanhado de uma salada verde ou como acompanhamento para
+                                    carnes grelhadas.</li>
+                            </ul>
+                            
                         </div>
                     </section>
                 </div>
@@ -268,11 +228,11 @@
             <section id="scrollspyHeading3">
                 <div class="container text-center">
                     <h1 class="corForte">Resolução</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4CCAWSkzeY0"
-                        title="PÃO CASEIRO DE BATATA DOCE - SIMPLES, FÁCIL E ECONÔMICO |GORDICES DA TEKA"
-                        frameborder="0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iyA0HEjn_qg"
+                        title="COMO TIRAR O AMARGO DO ALMEIRÃO MUITO RAPIDO" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
+                        
                 </div>
 
             </section>
