--- a/index.html
+++ b/index.html
@@ -68,125 +68,116 @@
                 <div class="container">
                     <div class="row d-flex justify-content-center">
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_1couveParmegiana.html">
                                 <div class="card" style="width: 25rem;">
                                     <img src="./image/couvePrato.png" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Parmegiana de Couve-flor</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_2GratinadoDeNabo.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/GratinadoDeNabo.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Gratinado de Nabo</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_3RisotoDePrimentaDeCheiro.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/Risoto.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Risoto de Pimenta de Cheiro</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_4QuicheDeAlhoPoro.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/QuicheAlho.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Quiche de Alho-Poró</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_5LasanhaDeBerinjela.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/lasanhaDeBeringela.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Lasanha de Berinjela</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_6DoceDeAbobora.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/doceDeAbobora.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Doce de Abóbora com Coco</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_7PaoDeBatataDoce.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/PaoDoce.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Pão de Batata Doce</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_8RaviolliRecheado.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/reviooli.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Ravioli Recheado</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_9tortinhaDeFolhaDeMostarda.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/tortilhaDeFolha.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Tortinha de Folha de Mostarda</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_10AlmeiraoComArrozBranco.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/Almeirao.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Almeirão com Arroz Branco</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Projects/projeto_couveParmegiana.html">
+                            <a href="./Receitas/projeto_11NaboERabanete.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                        <p class="card-text cardhover text-center">Nabo e Rabanete Assado</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col d-flex justify-content-center mt-4">
-                            <a href="./Receitas/projeto_couveParmegiana.html">
-                                <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                    <div class="card-body cardhover">
-                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
+                       
                         
                     </div>
                 </div>
